--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -223,7 +223,7 @@
             <h3>Application</h3>
             <ul>
                 <li>GroupId: com.codelab</li>
-                <li>ArtifactId: java-ms-boilerplate</li>
+                <li>ArtifactId: kotlin-ms-boilerplate</li>
                 <li>Version: 1.0.0-SNAPSHOT</li>
                 <li>Quarkus Version: 1.11.1.Final</li>
             </ul>
